# ALFIPbus

./: .gitignore  .gitmodules  BLDR.Dockerfile  CMakeLists.txt  Dockerfile  ENV.Dockerfile  IPbusControlPacket.h  IPbusHeaders.h  IPbusInterface.cpp  IPbusInterface.h  IPbusInterface_NO_QT.cpp  IPbusInterface_NO_QT.h  IpbusSWT.pro  README.md  ReadMe.md  SWT.cpp  SWT.h  SWT.pro  alf.Dockerfile  alfipbus  alfipbus.service  alfmetadata.txt  flp_test.cpp  ipbusswt.h  listener  listener.cpp  local_test.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  start.sh  start_mock.sh  test.cpp
.github/workflows/: Tests.yml  test.yml
DimRpcParallel/examples/: client.cpp  server.cpp
DimRpcParallel/src/: dimrpcqueue.cpp
IPbus/: .gitignore
IPbus/inc/: IPbusMaster.h
IpbusSWT/: .gitignore  README.md
IpbusSWT/DimRpcParallel/: .gitignore  CMakeLists.txt
IpbusSWT/DimRpcParallel/cmake/: DimRpcParallelConfig.cmake.in
IpbusSWT/DimRpcParallel/include/DimRpcParallel/: dimrpcparallel.h
IpbusSWT/DimRpcParallel/src/: dimcommandparallel.cpp  dimrpcparallel.cpp
IpbusSWT/IPbus/: .clang-format  CMakeLists.txt
IpbusSWT/IPbus/inc/: IPbusEnums.h  IPbusResponse.h
IpbusSWT/IPbus/src/: IPbusResponse.cxx
IpbusSWT/IPbus/test/: example.cpp  slave_test.cpp
IpbusSWT/inc/: Swt.h  SwtLink.h  utils.h
IpbusSWT/src/: Swt.cxx  SwtLink.cxx  utils.cxx
IpbusSWT/test/: flp_test_client.cpp
apps/: ALF.cpp
examples/: server.cpp
inc/: ALFIPbus.hpp  AlfConfig.h  AlfIPbus.h  AlfInfo.h  IPbusControlPacket.h  IPbusHeaders.h  IPbusInterface.h  IPbusMaster.h  IPbusPacket.h  IPbusPacket_SWT.h  IPbusPeriodic.h  IPbusRequest.h  IPbusResponse.h  IPbusSlave.h  Memory.h  SWT.h  SWTelectronics.h  Swt.h  SwtElectronics.h  SwtLink.h  Utils.h  logging.h  utils.h
inc/IPbus/: IPbusHeaders.h  IPbusLogger.h  IPbusMaster.h  IPbusPacket.h  IPbusRequest.h  IPbusStatusPacket.h
inc/IpbusSWT/: CruCommand.h  CruCommandBuffer.h  CruCommandExecutor.h  CruCommandFifo.h  CruCommandSequence.h  Swt.h  SwtFifo.h  SwtLink.h  utils.h
include/: dimcommandparallel.h  dimrpcqueue.h
include/DimRpcParallel/: dimcommandparallel.h  dimrpcqueue.h
lib/: .gitignore
src/: ALFIPbus.cpp  AlfConfig.cxx  AlfIPbus.cxx  AlfInfo.cxx  IPbusControlPacket.cpp  IPbusControlPacket.cxx  IPbusInterface.cpp  IPbusInterface.cxx  IPbusMaster.cxx  IPbusRequest.cpp  IPbusRequest.cxx  IPbusResponse.cpp  IPbusResponse.cxx  IPbusSlave.cxx  SWT.cpp  SWTelectronics.cpp  Swt.cxx  SwtElectronics.cxx  SwtLink.cxx  Utils.cpp  dimcommandparallel.cpp  dimrpcparallel.cpp  dimrpcqueue.cpp  main.cxx  utils.cxx
src/IPbus/: IPbusMaster.cxx  IPbusRequest.cxx  IPbusResponse.cxx  IPbusSlave.cxx
src/IpbusSWT/: CruCommandExecutor.cxx  CruCommandSequence.cxx  Swt.cxx  SwtFifo.cxx  SwtLink.cxx  utils.cxx
test/: example.cpp  flp_test.cpp  flp_test_client.cpp  flp_test_server.cpp  slave_test.cpp
test/dim_minmal/: install.sh
test/in-container-test/: alf-run.Dockerfile  arch.sh  build-alf.sh  build-tester.sh  in-container-test.sh  run-test.sh  tester-container.Dockerfile  tester.Dockerfile  tester_WORKFLOW.Dockerfile
test/in-container-test/common-storage/: test-configuration.toml
test/in-container-test/common-storage/output/: alf-log  generator-log  mock-log
test/in-container-test/common-storage/registers/: ftm.csv
